trivial: Fix compile with older versions of GLib

g_mapped_file_new_from_fd() was introduced in 2.31.0 not 2.30.0 as the
docs suggested.

Resoves https://bugs.freedesktop.org/show_bug.cgi?id=46481